feat: Enhance caching configuration and error handling in backend services
- Updated CacheConfig to implement personalized cache settings for various data types, optimizing performance based on access frequency and data volatility.
- Refactored GlobalExceptionHandler to utilize a consistent ErrorResponseDTO structure for all exceptions, improving clarity and maintainability of error responses.
- Introduced new validation methods in CitaService to enforce business rules for appointment scheduling, including time constraints and availability checks.
- Enhanced CitaRepository with a new method for fetching appointments without pagination, facilitating availability checks.
- Improved integration tests for CitaController to ensure proper handling of valid and invalid appointment dates.